--- a/package.json
+++ b/package.json
@@ -2,16 +2,31 @@
   "name": "BoilerVite",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.73.9"
+    "@tanstack/react-router": "^1.35.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "nativewind": "^2.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-native": "0.73.9",
+    "react-native-toast-notifications": "^3.4.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "^0.19.12",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,14 +36,29 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "jest": "^29.6.3",
+    "postcss": "^8.4.38",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "sass": "^1.77.4",
+    "tailwindcss": "^3.4.4",
+    "typescript": "5.0.4",
+    "vite": "^5.3.4"
   },
   "engines": {
     "node": ">=18"
